RESOLVED FIXED99105
MHTML generation crashes on www.vimeo.com
https://bugs.webkit.org/show_bug.cgi?id=99105
Summary MHTML generation crashes on www.vimeo.com
Jay Civelli
Reported 2012-10-11 15:18:34 PDT
Calling MHTMLArchive::generateMHTMLData() on a page containing an SVG image (such as http://www.vimeo.com) causes a crasher. This is related to 99102.
Attachments
Patch (2.33 KB, patch)
2012-10-11 15:25 PDT, Jay Civelli
no flags
Patch (6.51 KB, patch)
2012-10-11 18:40 PDT, Jay Civelli
no flags
Jay Civelli
Comment 1 2012-10-11 15:25:15 PDT
Adam Barth
Comment 2 2012-10-11 15:34:15 PDT
Comment on attachment 168287 [details] Patch This patch looks good, but we'd like a test case so we don't regress this behavior in the future.
Jay Civelli
Comment 3 2012-10-11 18:40:37 PDT
Adam Barth
Comment 4 2012-10-11 18:56:32 PDT
Comment on attachment 168331 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=168331&action=review Thanks. > Source/WebKit/chromium/tests/WebPageNewSerializerTest.cpp:335 > +// Test that we don't regress https://bugs.webkit.org/show_bug.cgi?id=99105 We generally skip these sorts of comments. The information is in the svn history.
Build Bot
Comment 5 2012-10-11 18:58:20 PDT
Adam Barth
Comment 6 2012-10-11 19:01:19 PDT
Comment on attachment 168331 [details] Patch I don't see how this patch could have broken the apple-win port.
WebKit Review Bot
Comment 7 2012-10-11 19:13:59 PDT
Comment on attachment 168331 [details] Patch Clearing flags on attachment: 168331 Committed r131125: <http://trac.webkit.org/changeset/131125>
WebKit Review Bot
Comment 8 2012-10-11 19:14:02 PDT
All reviewed patches have been landed. Closing bug.
Anders Carlsson
Comment 9 2012-10-11 20:46:59 PDT
(In reply to comment #6) > (From update of attachment 168331 [details]) > I don't see how this patch could have broken the apple-win port. Here's why: + LOG_ERROR("No data for image %s", url.utf8String().data()); KURL.h has #if USE(GOOGLEURL) // Getters for the parsed structure and its corresponding 8-bit string. const url_parse::Parsed& parsed() const { return m_url.m_parsed; } const CString& utf8String() const { return m_url.utf8String(); } #endif Maybe nobody else is building with LOG_ERROR enabled? I attempted a fix.
Adam Barth
Comment 10 2012-10-11 21:09:02 PDT
> I attempted a fix. Thanks.
Jay Civelli
Comment 11 2012-10-12 10:05:31 PDT
Thanks a lot Anders for fixing the breakage!
Note You need to log in before you can comment on or make changes to this bug.