Source/WebCore: Fix for a crasher when generating MHTML for a page containing SVG images. https://bugs.webkit.org/show_bug.cgi?id=99105

Reviewed by Adam Barth.

* page/PageSerializer.cpp:
(WebCore::PageSerializer::serializeCSSStyleSheet):
(WebCore::PageSerializer::addImageToResources):

Source/WebKit/chromium: Test for a fix for a crasher when generating MHTML for a page containing SVG images.
https://bugs.webkit.org/show_bug.cgi?id=99105

Reviewed by Adam Barth.

* page/PageSerializer.cpp:
(WebCore::PageSerializer::serializeCSSStyleSheet):
(WebCore::PageSerializer::addImageToResources):


Canonical link: https://commits.webkit.org/117094@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131125 268f45cc-cd09-0410-ab3c-d52691b4dbfc